[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10.1", features = ["macros"] }
regex = "1.5.4"
rustyline = "9.1.2"

[[bin]]
name = "monkey_rlpl"
path = "src/rlpl.rs"
