[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
phf = { version = "0.10.1", features = ["macros"] }
rustyline = "9.1.2"

[[bin]]
name = "monkey_rppl"
path = "src/rppl.rs"
